test/data/codegen/valid/entity_nullable_node/queries.cypher
// name: MaybePerson :one
OPTIONAL MATCH (p:Person) RETURN p
