test/data/codegen/invalid/identifier_collision_reserved/queries.cypher
// name: New :one
MATCH (p:Person) RETURN p.name
